--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.44",
     "@types/react-dom": "^17.0.16",
     "autoprefixer": "^10.4.5",
+    "axios": "^0.24.0",
     "postcss": "^8.4.12",
     "postcss-cli": "^9.1.0",
     "postcss-preset-env": "^7.4.4",
