--- a/package.json
+++ b/package.json
@@ -6,21 +6,23 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.29",
-    "@types/react": "^17.0.44",
-    "@types/react-dom": "^17.0.16",
-    "autoprefixer": "^10.4.5",
     "axios": "^0.24.0",
-    "postcss": "^8.4.12",
     "postcss-cli": "^9.1.0",
     "postcss-preset-env": "^7.4.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
-    "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.29",
+    "@types/react": "^18.0.8",
+    "@types/react-dom": "^18.0.0",
+    "autoprefixer": "^10.4.5",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.24"
   },
   "scripts": {
     "start": "react-scripts start",
